<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTrackFragment"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre de la canción"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/trackName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Duración"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:hint="Minutos"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trackMinutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:hint="Segundos"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trackSeconds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/addTrackBtn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="Agregar canción"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp" />

        <Button
            android:id="@+id/saveTracksBtn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="Guardar canciones"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksRv"
            android:layout_width="match_parent"
            android:layout_height="299dp"
            android:background="@null"
            tools:listitem="@layout/add_track_item" />

    </LinearLayout>

</FrameLayout>