<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateAlbumFragment"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre del Album"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:helperText="Ingrese el nombre del Album">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textAlbumName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Cover"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:helperText="Ingrese el link al cover del album">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Fecha de lanzamiento"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:helperText="Ingrese la fecha en que se lanzo el album">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/releaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Descripcion"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:helperText="Ingrese la descripcion del album">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="106dp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Genero"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:helperText="Ingrese el genero del album">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Disquera"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:helperText="Ingrese el sello discografico">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recordLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/createAlbumBtn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="Crear Album"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp" />
    </LinearLayout>

</FrameLayout>