<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MenuUsuarioFragment"
    android:background="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@null">

<!--        <TextView-->
<!--            android:id="@+id/textView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/usuario_title"/>-->

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_albums" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_artistas" />

        <Button
            android:id="@+id/collectors_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_coleccionistas" />

    </LinearLayout>

</FrameLayout>